force-app/main/default/objects/Accounting_Data__c/fields/Accounting_Amount__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Amount__c</fullName>
    <description>Amount of change for accounting purposes</description>
    <label>Accounting Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>