force-app/main/default/objects/Accounting_Data__c/fields/Accounting_Dt__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Dt__c</fullName>
    <description>Accounting Date for the pending group.</description>
    <formula>IF(Cloned_formula_field_data__c &lt;&gt; &quot;&quot;,Cloned_formula_field_data__c,
IF(MONTH(DATEVALUE(CreatedDate)) &lt; 10, &quot;0&quot;, &quot;&quot;)+ TEXT(MONTH(DATEVALUE(CreatedDate) ))+IF(DAY(DATEVALUE(CreatedDate)) &lt; 10, &quot;0&quot;, &quot;&quot;)+ TEXT(DAY(DATEVALUE(CreatedDate)))
+TEXT(YEAR(DATEVALUE(CreatedDate))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ACCOUNTING_DT must be within the open accounting period for the specified pending group transaction type and Business Unit.        

If a date is not provided it will  default to current date.</inlineHelpText>
    <label>Accounting_Dt</label>
    <type>Text</type>
</CustomField>