force-app/main/default/objects/Accounting_Data__c/fields/ACTIVITY_ID__c.field-meta.xml
<CustomField>
    <fullName>ACTIVITY_ID__c</fullName>
    <label>ACTIVITY_ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>