force-app/main/default/objects/Accounting_Data__c/fields/Affiliate_intra2__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_intra2__c</fullName>
    <label>Affiliate_intra2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>