force-app/main/default/objects/Accounting_Data__c/fields/ALTACCT__c.field-meta.xml
<CustomField>
    <fullName>ALTACCT__c</fullName>
    <label>ALTACCT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>