force-app/main/default/objects/Accounting_Data__c/fields/ANALYSIS_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ANALYSIS_TYPE__c</fullName>
    <label>ANALYSIS_TYPE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>