force-app/main/default/objects/Accounting_Data__c/fields/BILL_OF_LADING__c.field-meta.xml
<CustomField>
    <fullName>BILL_OF_LADING__c</fullName>
    <description>&quot;AR Number

5 Digit AR Number provided on the Half sheet .
&quot;</description>
    <label>BILL_OF_LADING</label>
    <length>30</length>
    <type>Text</type>
</CustomField>