force-app/main/default/objects/Accounting_Data__c/fields/BUDGET_DT__c.field-meta.xml
<CustomField>
    <fullName>BUDGET_DT__c</fullName>
    <description>&quot;Budget Date of the transaction.

The budget date/appropriation date including the fiscal year for the budget associated with the receivable &quot;</description>
    <label>BUDGET_DT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>