force-app/main/default/objects/Accounting_Data__c/fields/Business_Unit_Gl__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Gl__c</fullName>
    <defaultValue>&#39;7350&#39;</defaultValue>
    <description>GL Business Unit</description>
    <label>Business_Unit_Gl</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>