force-app/main/default/objects/Accounting_Data__c/fields/Case_Issue__c.field-meta.xml
<CustomField>
    <fullName>Case_Issue__c</fullName>
    <label>Case Issue</label>
    <referenceTo>DIR_Violation__c</referenceTo>
    <relationshipLabel>Accounting Data</relationshipLabel>
    <relationshipName>Accounting_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>