force-app/main/default/objects/Accounting_Data__c/fields/CHARTFIELD1__c.field-meta.xml
<CustomField>
    <fullName>CHARTFIELD1__c</fullName>
    <label>CHARTFIELD1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>