force-app/main/default/objects/Accounting_Data__c/fields/CHARTFIELD2__c.field-meta.xml
<CustomField>
    <fullName>CHARTFIELD2__c</fullName>
    <label>CHARTFIELD2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>