force-app/main/default/objects/Accounting_Data__c/fields/CHARTFIELD3__c.field-meta.xml
<CustomField>
    <fullName>CHARTFIELD3__c</fullName>
    <label>CHARTFIELD3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>