force-app/main/default/objects/Accounting_Data__c/fields/Class_Fld__c.field-meta.xml
<CustomField>
    <fullName>Class_Fld__c</fullName>
    <label>Class_Fld</label>
    <length>5</length>
    <type>Text</type>
</CustomField>