force-app/main/default/objects/Accounting_Data__c/fields/Cloned_formula_field_data__c.field-meta.xml
<CustomField>
    <fullName>Cloned_formula_field_data__c</fullName>
    <label>Cloned formula field data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>