force-app/main/default/objects/Accounting_Data__c/fields/cntrl_cnt__c.field-meta.xml
<CustomField>
    <fullName>cntrl_cnt__c</fullName>
    <formula>Case_Issue__r.Control_Cnt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cntrl_cnt (unused)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>