force-app/main/default/objects/Accounting_Data__c/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <defaultValue>&#39;DLSEJEU&#39;</defaultValue>
    <description>Collector associated with the open item.</description>
    <inlineHelpText>Refer to the Interface Configuration Workbook posted on the DLN for valid STATE configuration values.

Default = DLSEJEU</inlineHelpText>
    <label>Collector</label>
    <length>8</length>
    <type>Text</type>
</CustomField>