force-app/main/default/objects/Accounting_Data__c/fields/Contract_Num__c.field-meta.xml
<CustomField>
    <fullName>Contract_Num__c</fullName>
    <description>Contract Number

Revenue Contract ID Number associated with the open item.

This field may be used to reference any contract number associated with the item.</description>
    <inlineHelpText>Default = Blank</inlineHelpText>
    <label>Contract_Num</label>
    <length>25</length>
    <type>Text</type>
</CustomField>