force-app/main/default/objects/Accounting_Data__c/fields/Control_Amount__c.field-meta.xml
<CustomField>
    <fullName>Control_Amount__c</fullName>
    <label>Control Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>