force-app/main/default/objects/Accounting_Data__c/fields/Control_Amt__c.field-meta.xml
<CustomField>
    <fullName>Control_Amt__c</fullName>
    <description>Control Amount

Total dollar amount for all of the outstanding receivables in a group.</description>
    <formula>IF(ISPICKVAL( Type_of_event__c,&quot;NEW&quot;),Case_Issue__r.Control_Amt__c, Case_Issue__r.Control_Amt1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CONTROL_AMT must match the sum of receivables amount for a group.  If the sum does not match, the group will be rejected.</inlineHelpText>
    <label>Control_Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>