force-app/main/default/objects/Accounting_Data__c/fields/Control_Cnt__c.field-meta.xml
<CustomField>
    <fullName>Control_Cnt__c</fullName>
    <description>Control Count

Count of individual receivables that are included in the group as separate transactions.</description>
    <formula>IF(ISPICKVAL( Type_of_event__c,&quot;New&quot;),Case_Issue__r.Control_Cnt__c/2, Case_Issue__r.Control_Cnt1__c/2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Control_Cnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>