force-app/main/default/objects/Accounting_Data__c/fields/Control_Count__c.field-meta.xml
<CustomField>
    <fullName>Control_Count__c</fullName>
    <label>Control Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>