force-app/main/default/objects/Accounting_Data__c/fields/Cr_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Cr_Analyst__c</fullName>
    <description>Credit Analyst associated with the open item.</description>
    <inlineHelpText>If left blank, CR_ANALYST will default from customer&#39;s Bill To Options.

Default=Blank</inlineHelpText>
    <label>Cr_Analyst</label>
    <length>8</length>
    <type>Text</type>
</CustomField>