force-app/main/default/objects/Accounting_Data__c/fields/Debit_or_Credit__c.field-meta.xml
<CustomField>
    <fullName>Debit_or_Credit__c</fullName>
    <label>Debit or Credit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>