force-app/main/default/objects/Accounting_Data__c/fields/Dispute_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Amount__c</fullName>
    <description>Dispute Amount

Amount being disputed within the open item.</description>
    <formula>IF(Dispute_Chkbox__c = &#39;Y&#39;, Case_Issue__r.Citation_Amount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DISPUTE_AMOUNT is required when DISPUTE_CHKBOX is &#39;Y&#39;.

DISPUTE_AMOUNT must be blank when DISPUTE_CHKBOX is &#39;N&#39;.</inlineHelpText>
    <label>Dispute_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>