force-app/main/default/objects/Accounting_Data__c/fields/Dispute_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Date__c</fullName>
    <description>Dispute Date

Indicates the date that an item was disputed.</description>
    <formula>IF( Dispute_Chkbox__c = &#39;Y&#39;,(IF(MONTH(Case_Issue__r.Appeal_Date__c) &lt; 10, &quot;0&quot;, &quot;&quot;)+ TEXT(MONTH(Case_Issue__r.Appeal_Date__c) )+IF(DAY(Case_Issue__r.Appeal_Date__c) &lt; 10, &quot;0&quot;, &quot;&quot;)+ TEXT(DAY(Case_Issue__r.Appeal_Date__c))
+TEXT(YEAR(Case_Issue__r.Appeal_Date__c))),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DISPUTE_DATE is required when DISPUTE_CHKBOX is &#39;Y&#39;.

DISPUTE_DATE must be blank when DISPUTE_CHKBOX is &#39;N&#39;.</inlineHelpText>
    <label>Dispute_Date</label>
    <type>Text</type>
</CustomField>