force-app/main/default/objects/Accounting_Data__c/fields/Dispute_Status__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Status__c</fullName>
    <description>Dispute Status

Reason for the dispute.</description>
    <inlineHelpText>DISPUTE_STATUS is required when DISPUTE_CHKBOX is &#39;Y&#39;. 

DISPUTE_STATUS must be blank when DISPUTE_CHKBOX is &#39;N&#39;.</inlineHelpText>
    <label>Dispute_Status</label>
    <length>3</length>
    <type>Text</type>
</CustomField>