force-app/main/default/objects/Accounting_Data__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <description>Additional document ID reference for an open item.

This field may be used to reference any document number related to the receivable (e.g. voucher number, order number, etc.).</description>
    <inlineHelpText>Default = Blank</inlineHelpText>
    <label>Document</label>
    <length>30</length>
    <type>Text</type>
</CustomField>