force-app/main/default/objects/Accounting_Data__c/fields/Entry_Reason__c.field-meta.xml
<CustomField>
    <fullName>Entry_Reason__c</fullName>
    <label>Entry Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APEAL</fullName>
            </value>
            <value>
                <fullName>DECRS</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>FEDRL</fullName>
            </value>
            <value>
                <fullName>LEGAL</fullName>
            </value>
            <value>
                <fullName>MISC</fullName>
            </value>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>PAR</fullName>
            </value>
            <value>
                <fullName>REIMI</fullName>
            </value>
            <value>
                <fullName>REIMO</fullName>
            </value>
            <value>
                <fullName>REIMP</fullName>
            </value>
            <value>
                <fullName>REIMS</fullName>
            </value>
            <value>
                <fullName>WAIVE</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>AROT</fullName>
            </value>
            <value>
                <fullName>INCRS</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>PNLTY</fullName>
            </value>
            <value>
                <fullName>CONTG</fullName>
            </value>
            <value>
                <fullName>RCLAS</fullName>
            </value>
            <value>
                <fullName>RVREV</fullName>
            </value>
            <value>
                <fullName>PMT</fullName>
            </value>
            <value>
                <fullName>RVPMT</fullName>
            </value>
            <value>
                <fullName>PMT-UA</fullName>
            </value>
            <value>
                <fullName>CONT</fullName>
                <isActive>false</isActive>
                <label>CONT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>