force-app/main/default/objects/Accounting_Data__c/fields/Group_Bu__c.field-meta.xml
<CustomField>
    <fullName>Group_Bu__c</fullName>
    <defaultValue>7350</defaultValue>
    <description>Business Unit</description>
    <inlineHelpText>The FI$Cal business unit associated with the transaction group.</inlineHelpText>
    <label>Group_Bu</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>