force-app/main/default/objects/Accounting_Data__c/fields/GROUP_ID_STG__c.field-meta.xml
<CustomField>
    <fullName>GROUP_ID_STG__c</fullName>
    <description>Group ID Staging

GROUP_ID_STG value is provided by the department to distinguish different pending groups in a file.   Departments may determine the logic for grouping receivables (e.g. by receivable type or by customer).</description>
    <formula>&#39;DLSEINF&#39;+ Right(Case_Issue__r.Name,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GROUP_ID_STG</label>
    <type>Text</type>
</CustomField>