force-app/main/default/objects/Accounting_Data__c/fields/Group_Seq_Num__c.field-meta.xml
<CustomField>
    <fullName>Group_Seq_Num__c</fullName>
    <description>System-generated row number for the report; will it be with other groups or its own batch. check with Cal/OSHA IT</description>
    <inlineHelpText>Must be a unique number within a Group ID. The GROUP_SEQ_NUM should start with 1 and increment for each additional open item.</inlineHelpText>
    <label>Group_Seq_Num</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>