force-app/main/default/objects/Accounting_Data__c/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <defaultValue>&#39;B&#39;</defaultValue>
    <description>Group Category</description>
    <inlineHelpText>Must be a valid value within FI$Cal. 

If GROUP_TYPE is left blank, it will  default to B for Billing.</inlineHelpText>
    <label>Group_Type</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>