force-app/main/default/objects/Accounting_Data__c/fields/Monetary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monetary_Amount__c</fullName>
    <label>Monetary Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>