force-app/main/default/objects/Accounting_Data__c/fields/Operating_Unit__c.field-meta.xml
<CustomField>
    <fullName>Operating_Unit__c</fullName>
    <label>Operating_Unit</label>
    <length>8</length>
    <type>Text</type>
</CustomField>