force-app/main/default/objects/Accounting_Data__c/fields/Po_Ref__c.field-meta.xml
<CustomField>
    <fullName>Po_Ref__c</fullName>
    <description>Purchase Order Reference number associated with the open item.</description>
    <formula>&#39;&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Default = Citation number</inlineHelpText>
    <label>Po_Ref</label>
    <type>Text</type>
</CustomField>