force-app/main/default/objects/Accounting_Data__c/fields/PROJECT_ID__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_ID__c</fullName>
    <label>PROJECT_ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>