force-app/main/default/objects/Accounting_Data__c/fields/RESOURCE_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>RESOURCE_CATEGORY__c</fullName>
    <label>RESOURCE_CATEGORY</label>
    <length>18</length>
    <type>Text</type>
</CustomField>