force-app/main/default/objects/Accounting_Data__c/fields/RESOURCE_SUB_CAT__c.field-meta.xml
<CustomField>
    <fullName>RESOURCE_SUB_CAT__c</fullName>
    <label>RESOURCE_SUB_CAT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>