force-app/main/default/objects/Accounting_Data__c/fields/RESOURCE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>RESOURCE_TYPE__c</fullName>
    <label>RESOURCE_TYPE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>