force-app/main/default/objects/Accounting_Data__c/fields/Type_of_event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_event__c</fullName>
    <label>Type of event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>UA</fullName>
            </value>
            <value>
                <fullName>TD</fullName>
            </value>
            <value>
                <fullName>DIS</fullName>
            </value>
            <value>
                <fullName>RVPMT</fullName>
            </value>
            <value>
                <fullName>PMT</fullName>
            </value>
            <value>
                <fullName>RVPMT-NR</fullName>
            </value>
            <value>
                <fullName>PMT-NR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>