force-app/main/default/objects/Accounting_Data__c/fields/Uniq_Group_Date__c.field-meta.xml
<CustomField>
    <fullName>Uniq_Group_Date__c</fullName>
    <formula>DATEVALUE(Uniq_Group_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uniq Group Date</label>
    <type>Date</type>
</CustomField>