force-app/main/default/objects/Accounting_Data__c/fields/Violation_Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>Violation_Accounting_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Violation Accounting Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Violation_Accounting_Code__c.Case_Violation__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case_Issue__c</valueField>
        </filterItems>
        <filterItems>
            <field>Violation_Accounting_Code__c.Payment_Type__c</field>
            <operation>equals</operation>
            <value>Penalty</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Violation_Accounting_Code__c</referenceTo>
    <relationshipLabel>Accounting Data</relationshipLabel>
    <relationshipName>Accounting_Data</relationshipName>
    <type>Lookup</type>
</CustomField>