force-app/main/default/objects/Accounting_Data__c/fields/X1_096_1_825_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>X1_096_1_825_Days_Past_Due__c</fullName>
    <formula>if(AND(Age__c &gt; 1110,Age__c &lt;= 1840),Monetary_Amount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1,096-1,825 Days Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>